Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in
E
evolution-data-server
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 38
    • Issues 38
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 0
    • Merge Requests 0
  • CI / CD
    • CI / CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI / CD
    • Repository
    • Value Stream
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Members
    • Members
  • Collapse sidebar
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
  • GNOME
  • evolution-data-server
  • Issues
  • #209

Closed
Open
Opened Apr 29, 2020 by Дилян Палаузов@dilyan.palauzovContributor

libedataserverui: Remove unneeded dependency on libebackend

I compiled and installed evolution-data-server using adress sanitizer. Then I configured EDS to compile without ASAN and to use introspection and do vala binding. That build fails, as apparently the installed libebackend-1.2.so.10 is preferred during linking, rather tha libebackend in the build tree. Below is the failure.

[0/1] /usr/local/bin/cmake --regenerate-during-build -S/git/gnome/evolution-data-server -B/git/gnome/evolution-data-server/build
-- Using MIT Kerberos 5 (found by pkg-config)
CMake Warning at CMakeLists.txt:622 (message):
  sendmail not found, defaulting to /usr/sbin/sendmail


-- Configure options:
--    LIB_SUFFIX ................... 
--    CMAKE_INSTALL_PREFIX ......... /usr/local
--    BIN_INSTALL_DIR .............. /usr/local/bin
--    INCLUDE_INSTALL_DIR .......... /usr/local/include
--    LIB_INSTALL_DIR .............. /usr/local/lib
--    LIBEXEC_INSTALL_DIR .......... /usr/local/libexec
--    SHARE_INSTALL_PREFIX ......... /usr/local/share
--    LOCALE_INSTALL_DIR ........... /usr/local/share/locale
--    SYSCONF_INSTALL_DIR .......... /usr/local/etc
--    DBUS_SERVICES_PREFIX ......... 
--    WITH_DBUS_SERVICE_DIR ........ /usr/local/share/dbus-1/services
--    WITH_SYSTEMDUSERUNITDIR ...... /usr/local/lib/systemd/user
--    ENABLE_CODE_COVERAGE ......... OFF
--    ENABLE_SCHEMAS_COMPILE ....... ON
--    ENABLE_INTROSPECTION ......... ON
--    ENABLE_GTK_DOC ............... OFF
--    ENABLE_INSTALLED_TESTS ....... OFF
--    WITH_KRB5 .................... ON
--    WITH_KRB5_INCLUDES ........... 
--    WITH_KRB5_LIBS ............... 
--    WITH_OPENLDAP ................ /usr
--    WITH_SUNLDAP ................. OFF
--    WITH_STATIC_LDAP ............. OFF
--    WITH_PHONENUMBER ............. OFF
--    ENABLE_SMIME ................. ON
--    WITH_NSPR_INCLUDES ........... 
--    WITH_NSPR_LIBS ............... 
--    WITH_NSS_INCLUDES ............ 
--    WITH_NSS_LIBS ................ 
--    ENABLE_MAINTAINER_MODE ....... OFF
--    WITH_PRIVATE_DOCS ............ OFF
--    ENABLE_GTK ................... ON
--    ENABLE_OAUTH2 ................ ON
--    WITH_GOOGLE_CLIENT_ID ........ 590402290962-2i0b7rqma8b9nmtfrcp7fa06g6cf7g74.apps.googleusercontent.com
--    WITH_GOOGLE_CLIENT_SECRET .... mtfUe5W8Aal9DcgVipOY1T9G
--    WITH_OUTLOOK_CLIENT_ID ....... cc6e0693-0e26-4220-8322-9d363e308fc6
--    WITH_OUTLOOK_CLIENT_SECRET ... 
--    ENABLE_EXAMPLES .............. ON
--    ENABLE_GOA ................... OFF
--    ENABLE_BACKEND_PER_PROCESS ... OFF
--    WITH_LIBDB ................... ON
--    WITH_LIBDB_CFLAGS ............ 
--    WITH_LIBDB_LIBS .............. 
--    ENABLE_BACKTRACES ............ OFF
--    ENABLE_IPV6 .................. ON
--    ENABLE_WEATHER ............... ON
--    ENABLE_CANBERRA .............. OFF
--    ENABLE_DOT_LOCKING ........... ON
--    ENABLE_FILE_LOCKING .......... fcntl
--    ENABLE_BROKEN_SPOOL .......... OFF
--    ENABLE_GOOGLE ................ OFF
--    ENABLE_LARGEFILE ............. ON
--    ENABLE_VALA_BINDINGS ......... ON
-- Configuring done
-- Generating done
-- Build files have been written to: /git/gnome/evolution-data-server/build
[1/138] cd /git/gnome/evolution-data-server/build/src/libedataserverui && /usr/local/bin/cmake -E env "CC='/usr/local/bin/cc'" LDFLAGS= LD_LIBRARY_PATH=\"/git/gnome/evolution-data-server/build:/git/gnome/evolution-data-server/build/src:/git/gnome/evolution-data-server/build/src/libedataserverui:/git/gnome/evolution-data-server/build/src/private:/git/gnome/evolution-data-server/build/src/calendar/libecal:/git/gnome/evolution-data-server/build/src/camel:/git/gnome/evolution-data-server/build/src/libedataserver:/usr/local/lib\" /usr/local/bin/g-ir-scanner --add-include-path=/git/gnome/evolution-data-server/build --add-include-path=/git/gnome/evolution-data-server/build/src --add-include-path=/git/gnome/evolution-data-server --add-include-path=/git/gnome/evolution-data-server/src --add-include-path=/git/gnome/evolution-data-server/build/src/libedataserverui --add-include-path=/git/gnome/evolution-data-server/src/libedataserverui --library-path=/git/gnome/evolution-data-server/build --library-path=/git/gnome/evolution-data-server/build/src --library-path=/git/gnome/evolution-data-server/build/src/libedataserverui --library-path=/git/gnome/evolution-data-server/build/src/private --library-path=/git/gnome/evolution-data-server/build/src/calendar/libecal --library-path=/git/gnome/evolution-data-server/build/src/camel --library-path=/git/gnome/evolution-data-server/build/src/libedataserver --identifier-prefix=E --include-uninstalled=/git/gnome/evolution-data-server/build/src/camel/Camel-1.2.gir --include-uninstalled=/git/gnome/evolution-data-server/build/src/libedataserver/EDataServer-1.2.gir --include-uninstalled=/git/gnome/evolution-data-server/build/src/calendar/libecal/ECal-2.0.gir --add-include-path=/usr/local/share/gir-1.0 --library-path=/usr/local/lib --pkg-export libedataserverui-1.2 --c-include=libedataserverui/libedataserverui.h --cflags-begin -I/git/gnome/evolution-data-server/build/src/libedataserverui -I/git/gnome/evolution-data-server/build -I/git/gnome/evolution-data-server/build/src -I/git/gnome/evolution-data-server/src/libedataserverui -I/git/gnome/evolution-data-server -I/git/gnome/evolution-data-server/src -DLIBEDATASERVERUI_COMPILATION -I/git/gnome/evolution-data-server/build/src/calendar -I/git/gnome/evolution-data-server/src/calendar --cflags-end --verbose --namespace=EDataServerUI --nsversion=1.2 --no-libtool --library=camel-1.2 --library=ecal-2.0 --library=edataserver-1.2 --library=edataserverui-1.2 --include=GObject-2.0 --include=Gio-2.0 --include=Gtk-3.0 --include=Soup-2.4 --warn-all -I/git/gnome/evolution-data-server/build/src/libedataserverui -I/git/gnome/evolution-data-server/build -I/git/gnome/evolution-data-server/build/src -I/git/gnome/evolution-data-server/src/libedataserverui -I/git/gnome/evolution-data-server -I/git/gnome/evolution-data-server/src -DLIBEDATASERVERUI_COMPILATION -I/git/gnome/evolution-data-server/build/src/calendar -I/git/gnome/evolution-data-server/src/calendar --filelist=/git/gnome/evolution-data-server/build/src/libedataserverui/EDataServerUI_1_2_gir_files --output /git/gnome/evolution-data-server/build/src/libedataserverui/EDataServerUI-1.2.gir --accept-unprefixed
FAILED: src/libedataserverui/EDataServerUI-1.2.gir 
cd /git/gnome/evolution-data-server/build/src/libedataserverui && /usr/local/bin/cmake -E env "CC='/usr/local/bin/cc'" LDFLAGS= LD_LIBRARY_PATH=\"/git/gnome/evolution-data-server/build:/git/gnome/evolution-data-server/build/src:/git/gnome/evolution-data-server/build/src/libedataserverui:/git/gnome/evolution-data-server/build/src/private:/git/gnome/evolution-data-server/build/src/calendar/libecal:/git/gnome/evolution-data-server/build/src/camel:/git/gnome/evolution-data-server/build/src/libedataserver:/usr/local/lib\" /usr/local/bin/g-ir-scanner --add-include-path=/git/gnome/evolution-data-server/build --add-include-path=/git/gnome/evolution-data-server/build/src --add-include-path=/git/gnome/evolution-data-server --add-include-path=/git/gnome/evolution-data-server/src --add-include-path=/git/gnome/evolution-data-server/build/src/libedataserverui --add-include-path=/git/gnome/evolution-data-server/src/libedataserverui --library-path=/git/gnome/evolution-data-server/build --library-path=/git/gnome/evolution-data-server/build/src --library-path=/git/gnome/evolution-data-server/build/src/libedataserverui --library-path=/git/gnome/evolution-data-server/build/src/private --library-path=/git/gnome/evolution-data-server/build/src/calendar/libecal --library-path=/git/gnome/evolution-data-server/build/src/camel --library-path=/git/gnome/evolution-data-server/build/src/libedataserver --identifier-prefix=E --include-uninstalled=/git/gnome/evolution-data-server/build/src/camel/Camel-1.2.gir --include-uninstalled=/git/gnome/evolution-data-server/build/src/libedataserver/EDataServer-1.2.gir --include-uninstalled=/git/gnome/evolution-data-server/build/src/calendar/libecal/ECal-2.0.gir --add-include-path=/usr/local/share/gir-1.0 --library-path=/usr/local/lib --pkg-export libedataserverui-1.2 --c-include=libedataserverui/libedataserverui.h --cflags-begin -I/git/gnome/evolution-data-server/build/src/libedataserverui -I/git/gnome/evolution-data-server/build -I/git/gnome/evolution-data-server/build/src -I/git/gnome/evolution-data-server/src/libedataserverui -I/git/gnome/evolution-data-server -I/git/gnome/evolution-data-server/src -DLIBEDATASERVERUI_COMPILATION -I/git/gnome/evolution-data-server/build/src/calendar -I/git/gnome/evolution-data-server/src/calendar --cflags-end --verbose --namespace=EDataServerUI --nsversion=1.2 --no-libtool --library=camel-1.2 --library=ecal-2.0 --library=edataserver-1.2 --library=edataserverui-1.2 --include=GObject-2.0 --include=Gio-2.0 --include=Gtk-3.0 --include=Soup-2.4 --warn-all -I/git/gnome/evolution-data-server/build/src/libedataserverui -I/git/gnome/evolution-data-server/build -I/git/gnome/evolution-data-server/build/src -I/git/gnome/evolution-data-server/src/libedataserverui -I/git/gnome/evolution-data-server -I/git/gnome/evolution-data-server/src -DLIBEDATASERVERUI_COMPILATION -I/git/gnome/evolution-data-server/build/src/calendar -I/git/gnome/evolution-data-server/src/calendar --filelist=/git/gnome/evolution-data-server/build/src/libedataserverui/EDataServerUI_1_2_gir_files --output /git/gnome/evolution-data-server/build/src/libedataserverui/EDataServerUI-1.2.gir --accept-unprefixed
/usr/local/bin/cc -E -DLIBEDATASERVERUI_COMPILATION -I. -I/git/gnome/evolution-data-server/build/src/libedataserverui -I/git/gnome/evolution-data-server/build -I/git/gnome/evolution-data-server/build/src -I/git/gnome/evolution-data-server/src/libedataserverui -I/git/gnome/evolution-data-server -I/git/gnome/evolution-data-server/src -I/git/gnome/evolution-data-server/build/src/calendar -I/git/gnome/evolution-data-server/src/calendar -I/usr/local/include/libsoup-2.4 -I/usr/local/include -I/usr/local/include/libxml2 -I/usr/local/include/gtk-3.0 -I/usr/local/include/at-spi2-atk/2.0 -I/usr/local/include/at-spi-2.0 -I/usr/include.unser/dbus-1.0 -I/usr/lib/dbus-1.0/include -I/usr/local/include/atk-1.0 -I/usr/local/include/gio-unix-2.0 -I/usr/local/include/cairo -I/usr/local/include/pango-1.0 -I/usr/local/include/fribidi -I/usr/local/include/pixman-1 -I/usr/local/include/freetype2 -I/usr/local/include/harfbuzz -I/usr/local/include/libdrm -I/usr/local/include/libpng16 -I/usr/local/include/gdk-pixbuf-2.0 -I/usr/local/lib/libffi-3.2.1/include -I/usr/local/include/glib-2.0 -I/usr/local/lib64/glib-2.0/include -I/usr/include.unser/libmount -I/usr/include.unser/blkid -I/usr/include.unser/uuid -o g-ir-cpp-c39kzry7.i -C /git/gnome/evolution-data-server/build/src/libedataserverui/g-ir-cpp-c39kzry7.c
/usr/local/bin/cc -DLIBEDATASERVERUI_COMPILATION -I/git/gnome/evolution-data-server/build/src/libedataserverui -I/git/gnome/evolution-data-server/build -I/git/gnome/evolution-data-server/build/src -I/git/gnome/evolution-data-server/src/libedataserverui -I/git/gnome/evolution-data-server -I/git/gnome/evolution-data-server/src -I/git/gnome/evolution-data-server/build/src/calendar -I/git/gnome/evolution-data-server/src/calendar -I/usr/local/include/libsoup-2.4 -I/usr/local/include -I/usr/local/include/libxml2 -I/usr/local/include/gtk-3.0 -I/usr/local/include/at-spi2-atk/2.0 -I/usr/local/include/at-spi-2.0 -I/usr/local/include -I/usr/include.unser/dbus-1.0 -I/usr/lib/dbus-1.0/include -I/usr/local/include/atk-1.0 -I/usr/local/include -I/usr/local/include/gtk-3.0 -I/usr/local/include/gio-unix-2.0 -I/usr/local/include -I/usr/local/include/cairo -I/usr/local/include -I/usr/local/include/pango-1.0 -I/usr/local/include/fribidi -I/usr/local/include -I/usr/local/include/cairo -I/usr/local/include/pixman-1 -I/usr/local/include -I/usr/local/include/freetype2 -I/usr/local/include/harfbuzz -I/usr/local/include -I/usr/local/include/libdrm -I/usr/local/include -I/usr/local/include/libpng16 -I/usr/local/include -I/usr/local/include/gdk-pixbuf-2.0 -I/usr/local/include -I/usr/local/lib/libffi-3.2.1/include -I/usr/local/include/glib-2.0 -I/usr/local/lib64/glib-2.0/include -I/usr/local/include -I/usr/include.unser/libmount -I/usr/include.unser/blkid -I/usr/include.unser/uuid -I/usr/local/include -I/usr/local/lib/libffi-3.2.1/include -I/usr/local/include -I/usr/local/include/glib-2.0 -I/usr/local/lib64/glib-2.0/include -I/usr/local/include -I/usr/include.unser/libmount -I/usr/include.unser/blkid -I/usr/include.unser/uuid -I/git/gnome/evolution-data-server/build/src/libedataserverui -I/git/gnome/evolution-data-server/build -I/git/gnome/evolution-data-server/build/src -I/git/gnome/evolution-data-server/src/libedataserverui -I/git/gnome/evolution-data-server -I/git/gnome/evolution-data-server/src -I/git/gnome/evolution-data-server/build/src/calendar -I/git/gnome/evolution-data-server/src/calendar -c /git/gnome/evolution-data-server/build/src/libedataserverui/tmp-introspect1l1b14wt/EDataServerUI-1.2.c -o /git/gnome/evolution-data-server/build/src/libedataserverui/tmp-introspect1l1b14wt/EDataServerUI-1.2.o -Wno-deprecated-declarations -pthread
g-ir-scanner: link: /usr/local/bin/cc -o /git/gnome/evolution-data-server/build/src/libedataserverui/tmp-introspect1l1b14wt/EDataServerUI-1.2 /git/gnome/evolution-data-server/build/src/libedataserverui/tmp-introspect1l1b14wt/EDataServerUI-1.2.o -L. -Wl,-rpath,. -Wl,--no-as-needed -L/git/gnome/evolution-data-server/build -Wl,-rpath,/git/gnome/evolution-data-server/build -L/git/gnome/evolution-data-server/build/src -Wl,-rpath,/git/gnome/evolution-data-server/build/src -L/git/gnome/evolution-data-server/build/src/libedataserverui -Wl,-rpath,/git/gnome/evolution-data-server/build/src/libedataserverui -L/git/gnome/evolution-data-server/build/src/private -Wl,-rpath,/git/gnome/evolution-data-server/build/src/private -L/git/gnome/evolution-data-server/build/src/calendar/libecal -Wl,-rpath,/git/gnome/evolution-data-server/build/src/calendar/libecal -L/git/gnome/evolution-data-server/build/src/camel -Wl,-rpath,/git/gnome/evolution-data-server/build/src/camel -L/git/gnome/evolution-data-server/build/src/libedataserver -Wl,-rpath,/git/gnome/evolution-data-server/build/src/libedataserver -L/usr/local/lib -Wl,-rpath,/usr/local/lib -lcamel-1.2 -lecal-2.0 -ledataserver-1.2 -ledataserverui-1.2 -L/usr/local/lib64 -lgio-2.0 -lgobject-2.0 -Wl,--export-dynamic -lgmodule-2.0 -pthread -lglib-2.0
/usr/local/lib/gcc/x86_64-pc-linux-gnu/9.3.1/../../../../x86_64-pc-linux-gnu/bin/ld: /usr/local/lib/libebackend-1.2.so.10: undefined reference to `__asan_report_load4'
[…and so on…]
/usr/local/lib/gcc/x86_64-pc-linux-gnu/9.3.1/../../../../x86_64-pc-linux-gnu/bin/ld: /usr/local/lib/libebackend-1.2.so.10: undefined reference to `__asan_report_load2'
/usr/local/lib/gcc/x86_64-pc-linux-gnu/9.3.1/../../../../x86_64-pc-linux-gnu/bin/ld: /usr/local/lib/libebackend-1.2.so.10: undefined reference to `__asan_report_store8'
/usr/local/lib/gcc/x86_64-pc-linux-gnu/9.3.1/../../../../x86_64-pc-linux-gnu/bin/ld: /usr/local/lib/libebackend-1.2.so.10: undefined reference to `__asan_stack_malloc_0'
collect2: error: ld returned 1 exit status
linking of temporary binary failed: Command '['/usr/local/bin/cc', '-o', '/git/gnome/evolution-data-server/build/src/libedataserverui/tmp-introspect1l1b14wt/EDataServerUI-1.2', '/git/gnome/evolution-data-server/build/src/libedataserverui/tmp-introspect1l1b14wt/EDataServerUI-1.2.o', '-L.', '-Wl,-rpath,.', '-Wl,--no-as-needed', '-L/git/gnome/evolution-data-server/build', '-Wl,-rpath,/git/gnome/evolution-data-server/build', '-L/git/gnome/evolution-data-server/build/src', '-Wl,-rpath,/git/gnome/evolution-data-server/build/src', '-L/git/gnome/evolution-data-server/build/src/libedataserverui', '-Wl,-rpath,/git/gnome/evolution-data-server/build/src/libedataserverui', '-L/git/gnome/evolution-data-server/build/src/private', '-Wl,-rpath,/git/gnome/evolution-data-server/build/src/private', '-L/git/gnome/evolution-data-server/build/src/calendar/libecal', '-Wl,-rpath,/git/gnome/evolution-data-server/build/src/calendar/libecal', '-L/git/gnome/evolution-data-server/build/src/camel', '-Wl,-rpath,/git/gnome/evolution-data-server/build/src/camel', '-L/git/gnome/evolution-data-server/build/src/libedataserver', '-Wl,-rpath,/git/gnome/evolution-data-server/build/src/libedataserver', '-L/usr/local/lib', '-Wl,-rpath,/usr/local/lib', '-lcamel-1.2', '-lecal-2.0', '-ledataserver-1.2', '-ledataserverui-1.2', '-L/usr/local/lib64', '-lgio-2.0', '-lgobject-2.0', '-Wl,--export-dynamic', '-lgmodule-2.0', '-pthread', '-lglib-2.0']' returned non-zero exit status 1.
ninja: build stopped: subcommand failed.
Edited May 07, 2020 by Milan Crha
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
None
Milestone
None
Assign milestone
Time tracking
None
Due date
None
Reference: GNOME/evolution-data-server#209