I#209 - libedataserverui: Remove unneeded dependency on libebackend

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/-/issues/209